--- a/elmclient/src/static/index.html
+++ b/elmclient/src/static/index.html
@@ -7,10 +7,12 @@
     <title></title>
     <meta name="description" content="" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+
 </head>
 
 <body>
-    <div id="main" class="px3"></div>
+    <div id="main" class="px1"></div>
 </body>
 
 </html>
