--- a/openresty/nginx/html/swagger/index.html
+++ b/openresty/nginx/html/swagger/index.html
@@ -74,7 +74,7 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "/rest/",
+    url: "/api.json",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
