--- a/elmclient/src/static/index.html
+++ b/elmclient/src/static/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
