--- a/elmclient/src/static/index.html
+++ b/elmclient/src/static/index.html
@@ -7,7 +7,7 @@
     <title></title>
     <meta name="description" content="" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 </head>
 
