Fix API documentation using per-user JWT. Closes #131
Users will now see API documentation based on their identity. The /auth/api.json endpoint will parse a session cookie, obtain a JWT from the backend, and then fetch the OpenAPI specification from Postgrest using that JWT. The swagger-ui includes a textbox for users to paste in their JWT.

--- a/openresty/nginx/html/swagger/index.html
+++ b/openresty/nginx/html/swagger/index.html
@@ -74,8 +74,10 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "/api.json",
+    url: "/auth/api.json",
     dom_id: '#swagger-ui',
+    // See https://github.com/swagger-api/swagger-ui/issues/4631
+    validatorUrl: null,
     deepLinking: true,
     presets: [
       SwaggerUIBundle.presets.apis,
